# SkillOS

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  PORTING.md  PROJECT_DESIGN.md  README.md  deployment.md  docker-compose.yml  pyproject.toml  tmp_brackets.txt
.claude/: settings.json
.claude/agents/: security-reviewer.md  test-writer.md
data/: .hermes_compat_lock
docs/: AI_DEV_LOG.md  BENCHMARK_LOCAL.md  ENTERPRISE_ROLLOUT_PLAN.md  FRONTEND_EVALUATION.md  IMPROVEMENT_PLAN.md  MULTI_TENANT_PLAN.md  OPTIMIZATION_PLAN.md  PAPERS.md  PRODUCT_PHILOSOPHY.md  PRODUCT_ROLLOUT_PLAN.md  PROJECT_VISION.md  SKILLSBENCH_CI.md  USER_GUIDE.md
frontend/: AUDIT.md  account_watcher.js  admin.js  alpine-bridge.js  app.js  audio.js  auth.js  chat.js  docs.js  error-boundary.js  export-channel.js  hub.js  icons.js  index.html  intelligence.js  knowledge.js  login.html  onboarding.js  precipitation-result.js  quality.js  settings.js  skills.js  skills_io.js  socratic-ui.js  source_material.js  storage-keys.js  style.css  voice.js  workspace.js
jobs/: summary.json
scripts/: backup_skillos_data.py  ci_local.sh  download_official_task.py  e2e_playwright.py  migrate_legacy_skills.py  migrate_to_agentskills_standard.py  pilot_bootstrap.py  repair_reference_packs.py  run_bench_regression.py  run_dna_golden_ci.py  run_nightly_dna_bench.py  run_official_skill_compare.py  run_official_skillsbench_eval.py  run_official_skillsbench_suite.py  run_quick8_ci.py  seed_knowledge.py  skillopt_cli.py  stress_test_extraction.py  trigger_official_bench_ci.py  user_sim_3skills_bench_output.txt  vendor_cdn.sh  verify_22turn_output.txt  verify_contract_flow.py  verify_contract_flow_complete.py  verify_contract_flow_complete_output.txt  verify_contract_flow_output.txt  verify_knowledge_closure.py  verify_knowledge_closure_output.txt  verify_quick8_gates.py  verify_skill_bench_gates.py  verify_skill_bench_gates_output.txt
skillos/: __init__.py  benchmark.py  benchmark_epistemic.py  benchmark_epistemic_data.py  benchmark_local.py  config.py  db.py  hermes_bridge.py  llm_client.py  mcp_extract.py  mcp_server.py  skills_bench.py  skillsbench_cache.py  skillsbench_tasks.py
tests/: test_ablation.py  test_agent_learning.py  test_api_integration.py  test_api_skills_list.py  test_bench_quality.py  test_benchmark_epistemic.py  test_benchmark_local.py  test_code_review002_grader.py  test_cold_start.py  test_config.py  test_cycle_tasks.py  test_data_processing036_grader.py  test_db_migration.py  test_dispatch_intent.py  test_dna_evolution.py  test_dna_golden_ci.py  test_dna_lineage.py  test_dna_lineage_api.py  test_domain_competition.py  test_domain_templates.py  test_e2e.py  test_epistemic_bridge.py  test_evolution.py  test_extraction_helpers.py  test_extraction_quality.py  test_extraction_universal.py  test_feasibility_eval.py  test_full_pipeline.py  test_incremental_closure.py  test_incremental_store.py  test_ingest_cache.py  test_ingest_dedup.py  test_ingest_pipeline.py  test_ingestion_queue.py  test_integration.py  test_knowledge.py  test_learn_knowledge_cycle.py  test_lineage_crossref.py  test_marketplace.py  test_mcp_extract.py  (+47 more)
(+1425 files in other folders)
