[project]
name = "skillos"
version = "0.2.1"
description = "SkillOS — AI Skill Operating System. Create, evolve, and distribute AI agent skills."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SkillOS Team" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pywebview>=5.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "mcp>=1.0",
    "markitdown",
    "pdfplumber",
    "python-pptx",
]

[project.optional-dependencies]
desktop = ["pywebview>=5.0"]
all = ["skillos[desktop]", "funasr", "edge-tts"]

[project.scripts]
skillos = "skillos.ui.app:main"
skillos-mcp = "skillos.mcp_server:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
