[project]
name = "skillos"
version = "0.3.0"
description = "SkillOS — AI Skill Operating System. Create, evolve, and distribute AI agent skills."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SkillOS Team" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pywebview>=5.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "mcp>=1.0",
    "markitdown",
    "pdfplumber",
    "python-pptx",
]

[project.optional-dependencies]
desktop = ["pywebview>=5.0"]
all = ["skillos[desktop]", "funasr", "edge-tts"]

[project.scripts]
skillos = "skillos.ui.app:main"
skillos-mcp = "skillos.mcp_server:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    "scripts/archive/*",
    ".tools/*",
    "vendor/*",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (unused imports, undefined names)
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear (common bugs)
    "B006", # mutable defaults (list/dict as param default)
    "I",    # isort (import ordering)
]
extend-ignore = [
    "E501", # line too long (handled by formatter)
    "B904", # raise from within except
    "B008", # Depends() in FastAPI defaults is standard pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]  # allow fixture redefinition
"scripts/*" = ["F841"] # allow unused vars in scripts

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = [
    "scripts/archive/",
    "tests/",
    "vendor/",
    "build/",
]
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
show_error_codes = true
disable_error_code = [
    "call-overload",   # sqlite3.Row supports string-key access, but mypy sees tuple
    "no-redef",        # re-export pattern intentionally redefines names
    "attr-defined",    # dynamic attributes on dict proxies
    "var-annotated",   # type inference is sufficient for most local vars
    "union-attr",      # list|bool|None patterns in hermes_bridge are intentional
    "arg-type",        # overloaded max() key functions
]
